    * [UIMA-574] - CAS heap size is just increased by the initial heap size and is not doubled until a threshold is reached
    * [UIMA-575] - CPM Cas reordering broken with multiple threads
    * [UIMA-578] - XmiCasDeserializer "merge" functionality doesn't support Sofas properly
    * [UIMA-579] - Maven build failing for Eclipse plugins - apparently including incorrectly Eclipse 3.3 versions
    * [UIMA-583] - update documentation for adding PEARs to aggregate AEs
    * [UIMA-589] - The AnalysisEngine Descriptor editor disallows certain chars in Sofa names which documentation says are valid
    * [UIMA-598] - Memory leak from CAS pool
    * [UIMA-599] - Typo in JavaDocs for ParallelStep and SimpleStep 
    * [UIMA-606] - CDE shows error "Invalid descriptor" when saving a valid collection reader descriptor that imports a type by name
    * [UIMA-607] - Running PEAR class path switching code broken in multi-threading case (CPM)
    * [UIMA-619] - Wrong error message when loading type system
    * [UIMA-623] - test case for UIMA-607 fails on Linux
    * [UIMA-628] - PearRuntimeTest use the wrong PEAR files for testing
    * [UIMA-633] - Class loading issue with ResourceBundle when using the UIMAClassloader
    * [UIMA-639] - udpate ReleaseNotes for release 2.2.1

** Improvement
    * [UIMA-74] - make Eclipse plugins into features that can be installed by Eclipse update mechanism
    * [UIMA-582] - improve FileCompare used in JUnit Tests
    * [UIMA-608] - Move to Java 1.5
    * [UIMA-626] - Bring FeaturePathImpl to the 3rd millenium
    * [UIMA-630] - Make TypeSystemUtils.isIdentifier() public so it can be accessed by client code

** New Feature
    * [UIMA-580] - Make the CDE plugin extensible

** Task
    * [UIMA-576] - Change version number to 2.3-SNAPSHOT

** Test
    * [UIMA-585] - Reduce noisy output when running some CPE tests when run in Maven

** Wish
    * [UIMA-301] - CAS APIs should make it easier to deal with arrays of unknown element type