@@ -211,6 +211,10 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-639'>UIMA-639</a>] -         udpate ReleaseNotes for release 2.2.1
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-641'>UIMA-641</a>] -         CPM test case fails with Sun JVM
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-649'>UIMA-649</a>] -         CAS.getAnnotationIndex(Type) does creates invalid index objects
+</li>
 </ul>
     
 <h2>        Improvement
@@ -226,12 +230,18 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-630'>UIMA-630</a>] -         Make TypeSystemUtils.isIdentifier() public so it can be accessed by client code
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-636'>UIMA-636</a>] -         Improve CDE to allow other tools to re-use its functionality to edit a new UIMA Xml descriptor
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-638'>UIMA-638</a>] -         CVD should allow viewing FSArrays longer than 20 elements
+</li>
 </ul>
     
 <h2>        New Feature
 </h2>
 <ul>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-580'>UIMA-580</a>] -         Make the CDE plugin extensible
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-640'>UIMA-640</a>] -         Add more convenience methods to TypeSystemUtils
 </li>
 </ul>
             
