@@ -154,6 +154,8 @@ Release Notes - UIMA - Version 2.2.1
     * [UIMA-628] - PearRuntimeTest use the wrong PEAR files for testing
     * [UIMA-633] - Class loading issue with ResourceBundle when using the UIMAClassloader
     * [UIMA-639] - udpate ReleaseNotes for release 2.2.1
+    * [UIMA-641] - CPM test case fails with Sun JVM
+    * [UIMA-649] - CAS.getAnnotationIndex(Type) does creates invalid index objects
 
 ** Improvement
     * [UIMA-74] - make Eclipse plugins into features that can be installed by Eclipse update mechanism
@@ -161,9 +163,12 @@ Release Notes - UIMA - Version 2.2.1
     * [UIMA-608] - Move to Java 1.5
     * [UIMA-626] - Bring FeaturePathImpl to the 3rd millenium
     * [UIMA-630] - Make TypeSystemUtils.isIdentifier() public so it can be accessed by client code
+    * [UIMA-636] - Improve CDE to allow other tools to re-use its functionality to edit a new UIMA Xml descriptor
+    * [UIMA-638] - CVD should allow viewing FSArrays longer than 20 elements
 
 ** New Feature
     * [UIMA-580] - Make the CDE plugin extensible
+    * [UIMA-640] - Add more convenience methods to TypeSystemUtils
 
 ** Task
     * [UIMA-576] - Change version number to 2.3-SNAPSHOT
